tests/typecheck/should_compile/T14128Type.hs
module T14128Type where

data AType = AType
