tests/typecheck/should_fail/T13981A.hs
module T13981A where
import T13981B
import T13981C

data T = T
